2010-12-06  Andy Estes  <aestes@apple.com>

Reviewed by Darin Adler.

        Marquee elements do not stop animating when scrollAmount is set to 0.
        https://bugs.webkit.org/show_bug.cgi?id=50434

        Test: fast/html/marquee-scrollamount.html

        * rendering/RenderMarquee.cpp:
        (WebCore::RenderMarquee::timerFired): Allow increment to be 0.
2010-12-06  Andy Estes  <aestes@apple.com>

        Reviewed by Darin Adler.

        Marquee elements do not stop animating when scrollAmount is set to 0.
        https://bugs.webkit.org/show_bug.cgi?id=50434

        * fast/html/marquee-scrollamount.html: Added.
        * platform/mac/fast/html/marquee-scrollamount-expected.checksum: Added.
        * platform/mac/fast/html/marquee-scrollamount-expected.png: Added.
        * platform/mac/fast/html/marquee-scrollamount-expected.txt: Added.


Canonical link: https://commits.webkit.org/63817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73398 268f45cc-cd09-0410-ab3c-d52691b4dbfc